Revisão de listas

--- a/01.HTML-Revisão/index.html
+++ b/01.HTML-Revisão/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="https://youtu.be/3HjG1Y4QpVA?si=v2ZaWGu2ppmi-oII">INÍCIO</a></li>
                     <li><a href="https://youtu.be/3HjG1Y4QpVA?si=v2ZaWGu2ppmi-oII">CADASTRO</a></li>
-                    <li></li><a href="https://youtu.be/3HjG1Y4QpVA?si=v2ZaWGu2ppmi-oII">ENTRAR</a></li>
+                    <li><a href="https://youtu.be/3HjG1Y4QpVA?si=v2ZaWGu2ppmi-oII">ENTRAR</a></li>
                 </ul>
             </nav>
     </header>  
